# aix

./: .gitignore  Cargo.toml  README.md  SECURITY.md  release.toml
aix-cli/: Cargo.toml  README.md
aix-cli/src/: error.rs
aix-cli/src/log/: logger.rs
aix-cli/src/project/: builder.rs
aix-cli/src/project/extras/: docker.rs
rustx-cli/: Cargo.toml  README.md
rustx-cli/src/: context.rs  error.rs  fs.rs  fs_extra.rs  git.rs  handle.rs  lib.rs  logger.rs  project.rs  utils.rs
rustx-cli/src/config/: mod.rs
rustx-cli/src/fs/: mod.rs
rustx-cli/src/project/: builder.rs  mod.rs
rustx-cli/src/project/extras/: ci.rs  docker.rs  mod.rs
rustx-cli/src/utils/: git.rs  interpolation.rs  mod.rs
templates/: README.md
templates/extras/ci/github/.github/workflows/: ci.yml
templates/extras/docker/: .dockerignore  Dockerfile
templates/standalone/: Cargo.toml
templates/standalone/src/: env.rs  error.rs  lib.rs  main.rs
templates/workspace/: Cargo.toml
