[workspace]
resolver = "2"
members = ["aix-cli"]

[workspace.dependencies]
# -- Error 
thiserror = "1"

# -- JSON
serde = "1"
serde_json = "1"

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
