[package]
name = "rustx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustx"
path = "src/bin/rustx.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
dirs = "5.0"
tempdir = "0.3"
async-recursion = "1"
tokio = {version = "1", features = ["fs", "macros", "rt-multi-thread"]}
env_logger = "0.11"
log = "0.4"
lazy_static = "1.5"

clap = { version = "4", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
