[package]
name = "rustx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A command-line tool to quickly scaffold Rust + Actix projects with reasonable defaults"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
repository = "https://github.com/ekkolon/rustx"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["actix-web", "starter-template", "cli"]

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "rustx"
path = "src/bin/rustx.rs"


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
dirs = "5.0"
async-recursion = "1"
env_logger = "0.11"
log = "0.4"
regex = "1"

[dependencies.tokio]
version = "1.40"
features = ["fs", "macros", "rt-multi-thread", "io-std", "io-util"]

[dependencies.clap]
version = "4"
features = ["derive", "cargo"]


[dev-dependencies]
anyhow = "1"
tempfile = "3"


[lints.rust]
unsafe_code = "forbid"
