[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
rust-version = "{{rust_version}}"

[dependencies]
actix-web = "4"
actix-cors = "0.7"

# -- Error 
thiserror = "1"

# -- JSON
serde = "1"
serde_json = "1"

# -- Utilities
env_logger = "0.11"
dotenvy = "0.15"

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
